--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ h1, h2, h3, h4, h5, h6
     .how-content
     {
         width: 70%;
-        transform: translateY(-23vw);
+        transform: translateY(-8vw);
         h1 
         {
             font-size: 1.4em;
@@ -571,6 +571,7 @@ h1, h2, h3, h4, h5, h6
     {
         text-align: left;
         margin-left: 5vw;
+        transform: translateY(10vw);
         p
         {
             transform: translateX(-2.5vw);
@@ -582,7 +583,7 @@ h1, h2, h3, h4, h5, h6
         /* left: 35vw;
         top: 0.1vh; */
         margin-left: 40vw;
-        transform: translateY(-5vw);
+        transform: translateY(-3vw);
         text-transform: uppercase;
         background-image: linear-gradient(to right,#FF84FF,#5059F1);
         border: 1px solid #665cb2   ;
@@ -1209,6 +1210,7 @@ input[type=text]:focus {
     }
 }
 }
+.footer
 .footer-container
 {
     position: relative;
@@ -1326,4 +1328,3 @@ input[type=text]:focus {
     position:relative;
     bottom: 100vw;
 }
-
