--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@
         display: none;
     }
 }*/
+* {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Outfit";
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: "Open Sans",sans-serif;
+}
 html, body
 {
     position:relative;
@@ -28,6 +38,7 @@ html, body
     pointer-events:all ;
     z-index: -999 !important;
     height: max-content;
+  
 }
 @media only screen and (min-width: 1200px)
 {
@@ -640,7 +651,7 @@ input[type=text]:focus {
 .fcontent 
 {
     position:relative;
-    bottom: 20vw;
+    bottom: 10vw;
     width: 95%;
 }
 .feature-shape
